--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
    <div class="container">
@@ -15,8 +16,8 @@
     
     <!-- Login/Signup Toggle -->
     <div class="auth-toggle">
-      <button id="loginTab" class="active" onclick="showLogin()">Login</button>
-      <button id="signupTab" onclick="showSignup()">Sign Up</button>
+      <button id="loginTab" class="active btn btn-primary" onclick="showLogin()">Login</button>
+      <button id="signupTab" class="btn btn-primary" onclick="showSignup()">Sign Up</button>
     </div>
 
     <!-- Login Form -->
@@ -27,29 +28,29 @@
       <div id="classicLogin">
         <input type="text" id="usernameInput" placeholder="Username">
         <input type="password" id="passwordInput" placeholder="Password">
-        <button onclick="checkClassicLogin()">Login</button>
+        <button class="btn btn-primary" onclick="checkClassicLogin()">Login</button>
       </div>
 
       <p>OR</p>
 
       <!-- Login Buttons -->
       <div id="loginOptions">
-        <button onclick="showGoogleLogin()">Login with Google</button>
-        <button onclick="showPhoneLogin()">Login with Phone Number</button>
+        <button class="btn btn-primary" onclick="showGoogleLogin()">Login with Google</button>
+        <button class="btn btn-primary" onclick="showPhoneLogin()">Login with Phone Number</button>
       </div>
 
       <!-- Google Sign-in -->
       <div id="googleLogin" class="hidden">
-        <button onclick="signInWithGoogle()">Sign in with Google</button>
+        <button class="btn btn-primary" onclick="signInWithGoogle()">Sign in with Google</button>
       </div>
 
       <!-- Phone Login -->
       <div id="phoneLogin" class="hidden">
         <input type="text" id="phoneNumber" placeholder="Enter phone number (+91...)">
         <div id="recaptcha-container"></div>
-        <button onclick="sendOTP()">Send OTP</button>
+        <button class="btn btn-primary" onclick="sendOTP()">Send OTP</button>
         <input type="text" id="otp" placeholder="Enter OTP">
-        <button onclick="verifyOTP()">Verify OTP</button>
+        <button class="btn btn-primary" onclick="verifyOTP()">Verify OTP</button>
       </div>
     </div>
 
@@ -62,7 +63,7 @@
         <input type="text" id="signupUsername" placeholder="Username">
         <input type="password" id="signupPassword" placeholder="Password">
         <input type="password" id="signupConfirmPassword" placeholder="Confirm Password">
-        <button onclick="signupUser()">Sign Up</button>
+        <button class="btn btn-primary" onclick="signupUser()">Sign Up</button>
       </div>
     </div>
   </div>
