--- a/dashboard.html
+++ b/dashboard.html
@@ -29,6 +29,7 @@
 
   <div id="home" class="section active">
     <h2>Pending Journeys</h2>
+    <div class="table-container">
     <table id="pendingTable">
       <thead>
         <tr>
@@ -39,6 +40,7 @@
         <!-- Data will be inserted here by JavaScript -->
     </tbody>
     </table>
+    </div>
   </div>
 
   <div id="addJourney" class="section">
@@ -82,6 +84,7 @@
 
  <div id="history" class="section">
   <h2>Journey History</h2>
+   <div class="table-container">
   <table id="completedTripsTable">
     <thead>
       <tr>
@@ -102,6 +105,7 @@
     </thead>
     <tbody></tbody>
   </table>
+   </div>
 </div>
 
   <script src="js/app.js"></script>
