--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
 
 
-<!-- Then your app.js -->
+<!-- Then  app.js -->
 <script src="./js/app.js"></script>
 
 </head>
