--- a/dashboard.html
+++ b/dashboard.html
@@ -502,7 +502,7 @@ function formatTime(timeString) {
   return timeString;
 }
 
-function submitFuelEntry() {
+async function submitFuelEntry() {
   const driverData = JSON.parse(localStorage.getItem('driverData'));
   if (!driverData) {
     alert('Please login again');
@@ -527,56 +527,72 @@ function submitFuelEntry() {
     return;
   }
 
-  // Create FormData object
-  const formData = new FormData();
-  formData.append('type', 'add-fuel-entry');
-  formData.append('fuelId', fuelId);
-  formData.append('driverId', driverData.id);
-  formData.append('driverName', driverData.name);
-  formData.append('vehicleNumber', vehicleNumber);
-  formData.append('vehicleName', vehicleName);
-  formData.append('date', date);
-  formData.append('invoiceNumber', invoiceNumber);
-  formData.append('fuelType', fuelType);
-  formData.append('amount', amount);
-  formData.append('liters', liters);
-  formData.append('currentKm', currentKm);
-  formData.append('billImage', billImage, `${fuelId}.jpg`);
-
   // Show loading state
   const submitBtn = document.querySelector('#fuelForm button');
   submitBtn.disabled = true;
   submitBtn.textContent = 'Submitting...';
 
-  // Send data to Google Apps Script
-  fetch('https://script.google.com/macros/s/AKfycby6qC6DKPeZfVgNobLn-Qo68YMLI02uUfCO5dMbwOsNDcxBJ8CaIBSORuscUfNsnLsV7w/exec', {
-    method: 'POST',
-     mode: 'no-cors',
-    body: formData
-  })
-  .then(response => {
-    if (!response.ok) {
-      throw new Error('Network response was not ok');
+  try {
+    // Create FormData object
+    const formData = new FormData();
+    formData.append('type', 'add-fuel-entry');
+    formData.append('fuelId', fuelId);
+    formData.append('driverId', driverData.id);
+    formData.append('driverName', driverData.name);
+    formData.append('vehicleNumber', vehicleNumber);
+    formData.append('vehicleName', vehicleName);
+    formData.append('date', date);
+    formData.append('invoiceNumber', invoiceNumber);
+    formData.append('fuelType', fuelType);
+    formData.append('amount', amount);
+    formData.append('liters', liters);
+    formData.append('currentKm', currentKm);
+    formData.append('billImage', billImage, `${fuelId}.jpg`);
+
+    // Debug: Log formData contents
+    for (let [key, value] of formData.entries()) {
+      console.log(key, value instanceof Blob ? `Blob (${value.type}, ${value.size} bytes)` : value);
     }
-    return response.json();
-  })
-  .then(data => {
-    if (data.success) {
-      console.log('Fuel entry submitted successfully', data);
-      alert('Fuel entry submitted successfully!');
-      document.getElementById('fuelForm').reset();
+
+    // Send data to Google Apps Script
+    const response = await fetch('https://script.google.com/macros/s/AKfycby6qC6DKPeZfVgNobLn-Qo68YMLI02uUfCO5dMbwOsNDcxBJ8CaIBSORuscUfNsnLsV7w/exec', {
+      method: 'POST',
+      body: formData,
+      redirect: 'manual' // Important for GAS
+    });
+
+    // Handle potential redirect
+    if (response.redirected) {
+      const redirectResponse = await fetch(response.url);
+      const result = await redirectResponse.text();
+      return handleResponse(result);
     } else {
-      throw new Error(data.message || 'Failed to submit fuel entry');
+      const result = await response.text();
+      return handleResponse(result);
     }
-  })
-  .catch(error => {
-    console.error('Error submitting fuel entry:', error);
-    alert('Error submitting fuel entry: ' + error.message);
-  })
-  .finally(() => {
+
+    function handleResponse(result) {
+      let data;
+      try {
+        data = JSON.parse(result);
+      } catch (e) {
+        throw new Error('Invalid JSON response: ' + result.substring(0, 100));
+      }
+
+      if (data && data.success) {
+        alert('Fuel entry submitted successfully!');
+        document.getElementById('fuelForm').reset();
+      } else {
+        throw new Error(data.message || 'Server returned unsuccessful response');
+      }
+    }
+  } catch (error) {
+    console.error('Full error:', error);
+    alert('Submission failed: ' + error.message);
+  } finally {
     submitBtn.disabled = false;
     submitBtn.textContent = 'Submit Fuel Entry';
-  });
+  }
 }
   
 function generateFuelId() {
