--- a/dashboard.html
+++ b/dashboard.html
@@ -534,7 +534,26 @@ async function submitFuelEntry() {
 
   try {
     // Create FormData object
-    const formData = new FormData();
+
+  // Send data to Google Sheets web app
+ 
+    
+    const formData = {
+    type: 'add-fuel-entry',
+    fuelId:fuelId,
+    driverId:driverData.id,
+    driverName:driverId,
+    vehicleNumber: vehicleNumber,
+    vehicleName: vehicleName,
+    date: date,
+    invoiceNumber: invoiceNumber,
+    fuelType: fuelType,
+    amount: amount,
+    liters: liters,
+    currentKm: currentKm,
+    billImage: billImage
+  };
+    /*
     formData.append('type', 'add-fuel-entry');
     formData.append('fuelId', fuelId);
     formData.append('driverId', driverData.id);
@@ -552,40 +571,30 @@ async function submitFuelEntry() {
     // Debug: Log formData contents
     for (let [key, value] of formData.entries()) {
       console.log(key, value instanceof Blob ? `Blob (${value.type}, ${value.size} bytes)` : value);
-    }
+    }*/
 
     // Send data to Google Apps Script
-    const response = await fetch('https://script.google.com/macros/s/AKfycby6qC6DKPeZfVgNobLn-Qo68YMLI02uUfCO5dMbwOsNDcxBJ8CaIBSORuscUfNsnLsV7w/exec', {
-      method: 'POST',
-      body: formData,
-      redirect: 'manual' // Important for GAS
-    });
-
-    // Handle potential redirect
-    if (response.redirected) {
-      const redirectResponse = await fetch(response.url);
-      const result = await redirectResponse.text();
-      return handleResponse(result);
-    } else {
-      const result = await response.text();
-      return handleResponse(result);
+    fetch("https://script.google.com/macros/s/AKfycby6qC6DKPeZfVgNobLn-Qo68YMLI02uUfCO5dMbwOsNDcxBJ8CaIBSORuscUfNsnLsV7w/exec", {
+    method: 'POST',
+    body: JSON.stringify(formData),
+    mode: 'no-cors',
+    headers: {
+      "Content-Type": "application/json"
     }
-
-    function handleResponse(result) {
-      let data;
-      try {
-        data = JSON.parse(result);
-      } catch (e) {
-        throw new Error('Invalid JSON response: ' + result.substring(0, 100));
-      }
-
-      if (data && data.success) {
-        alert('Fuel entry submitted successfully!');
-        document.getElementById('fuelForm').reset();
-      } else {
-        throw new Error(data.message || 'Server returned unsuccessful response');
-      }
-    }
+  })
+  .then(response =>response.text())
+  .then(result => {
+    console.log("Save as Fuel result:", result);
+    alert("Fuel Details entered successfully!");
+    showSection('home');
+    location.reload();
+  })
+  .catch(error => {
+    console.error("Error saving Fuel Details:", error);
+    alert("Error saving Fuel Details. Please try again.");
+  });
+  
+   
   } catch (error) {
     console.error('Full error:', error);
     alert('Submission failed: ' + error.message);
