--- a/dashboard.html
+++ b/dashboard.html
@@ -550,35 +550,26 @@ async function submitFuelEntry() {
     billImage: billImage
   };
 
-    // Send data to Google Apps Script
-    const response = await fetch("https://script.google.com/macros/s/AKfycby6qC6DKPeZfVgNobLn-Qo68YMLI02uUfCO5dMbwOsNDcxBJ8CaIBSORuscUfNsnLsV7w/exec", {
-      method: 'POST',
-      body: JSON.stringify(formData)
-    });
-
-    if (!response.ok) {
-      throw new Error('Network response was not ok');
+   fetch("https://script.google.com/macros/s/AKfycby6qC6DKPeZfVgNobLn-Qo68YMLI02uUfCO5dMbwOsNDcxBJ8CaIBSORuscUfNsnLsV7w/exec", {
+    method: 'POST',
+    body: JSON.stringify(formData),
+    mode: 'no-cors',
+    headers: {
+      "Content-Type": "application/json"
     }
-
-    const result = await response.text();
-    console.log("Fuel entry result:", result);
-    
-    // Check if the result contains success message
-    if (result.includes('success') || result.includes('Success')) {
-      alert("Fuel Details entered successfully!");
-      document.getElementById('fuelForm').reset();
-      showSection('home');
-      location.reload();
-    } else {
-      throw new Error(result || 'Unknown error from server');
-    }
-  } catch (error) {
-    console.error("Error saving Fuel Details:", error);
-    alert("Error saving Fuel Details: " + error.message);
-  } finally {
-    submitBtn.disabled = false;
-    submitBtn.textContent = 'Submit Fuel Entry';
-  }
+  })
+  .then(response =>response.text())
+  .then(result => {
+    console.log("Save as Fuel result:", result);
+    alert("Fuel saved successfully!");
+    document.getElementById('journeyForm').reset();
+    showSection('home');
+    location.reload();
+  })
+  .catch(error => {
+    console.error("Error saving Fuel:", error);
+    alert("Error saving Fuel. Please try again.");
+  });
 }
   
 function generateFuelId() {
