--- a/dashboard.html
+++ b/dashboard.html
@@ -14,6 +14,12 @@
 
 </head>
 <body>
+
+   <!-- Loader -->
+    <div class="loader-container" id="loader">
+        <div class="loader"></div>
+    </div>
+  
   <div class="navbar">
     <div class="user-info">
       <div class="avatar"></div>
