--- a/dashboard.html
+++ b/dashboard.html
@@ -15,10 +15,16 @@
 </head>
 <body>
 
-   <!-- Loader -->
-    <div class="loader-container" id="loader">
-        <div class="loader"></div>
-    </div>
+   <!-- Add this at the top of the body -->
+<div class="loader-container" id="loader">
+    <div class="loader"></div>
+</div>
+
+<!-- Add overlay div (for mobile menu) -->
+<div class="overlay" id="overlay"></div>
+
+<!-- Add menu toggle button in your header/sidebar -->
+<button class="menu-toggle" id="menuToggle">☰</button>
   
   <div class="navbar">
     <div class="user-info">
