--- a/dashboard.html
+++ b/dashboard.html
@@ -57,8 +57,10 @@
   <div id="addJourney" class="section">
     <h2>Start New Journey</h2>
     <form id="journeyForm">
-      <input type="text" id="vehicleNumber" placeholder="Vehicle Number" required>
-      <input type="text" id="vehicleName" placeholder="Vehicle Name" required>
+      <select id="vehicleName" required onchange="updateVehicleNumber()">
+        <option value="">Select Vehicle</option>
+      </select>
+     <input type="text" id="vehicleNumber" placeholder="Vehicle Number" readonly required>
       <input type="text" id="startPoint" placeholder="Starting Point" required>
       <input type="number" id="startKm" placeholder="Starting KM" required>
       <input type="time" id="startTime" required>
@@ -143,6 +145,22 @@ document.addEventListener('DOMContentLoaded', function() {
   const menuToggle = document.getElementById('menuToggle');
     const sidebar = document.querySelector('.sidebar');
     const overlay = document.getElementById('overlay');
+
+  const vehicles = [
+  { name: 'Hycross', number: 'KL02BY3091 ' },
+  { name: 'Ertiga', number: 'KL23Y0927' }
+];
+
+    const vehicleNameSelect = document.getElementById('vehicleName');
+  
+  vehicles.forEach(vehicle => {
+    const option = document.createElement('option');
+    option.value = vehicle.name;
+    option.textContent = vehicle.name;
+    vehicleNameSelect.appendChild(option);
+  });
+
+
 
     if (menuToggle && sidebar) {
         menuToggle.addEventListener('click', function() {
@@ -232,6 +250,13 @@ document.addEventListener('DOMContentLoaded', function() {
     })
     .finally(hideLoader());
 });
+
+function updateVehicleNumber() {
+  const selectedName = document.getElementById('vehicleName').value;
+  const vehicle = vehicles.find(v => v.name === selectedName);
+  document.getElementById('vehicleNumber').value = vehicle ? vehicle.number : '';
+}
+
 
 // Function to mark a journey as complete
 function completeJourney(travelId) {
