--- a/dashboard.html
+++ b/dashboard.html
@@ -252,6 +252,10 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 
 function updateVehicleNumber() {
+   const vehicles = [
+  { name: 'Hycross', number: 'KL02BY3091 ' },
+  { name: 'Ertiga', number: 'KL23Y0927' }
+];
   const selectedName = document.getElementById('vehicleName').value;
   const vehicle = vehicles.find(v => v.name === selectedName);
   document.getElementById('vehicleNumber').value = vehicle ? vehicle.number : '';
