--- a/dashboard.html
+++ b/dashboard.html
@@ -76,8 +76,10 @@
 <div id="fuel" class="section">
   <h2>Fuel Entry</h2>
   <form id="fuelForm" enctype="multipart/form-data">
-    <input type="text" id="fuelVehicleNumber" placeholder="Vehicle Number" required>
-    <input type="text" id="fuelVehicleName" placeholder="Vehicle Name" required>
+     <select id="fuelVehicleName" required onchange="updateVehicleNumber()">
+        <option value="">Select Vehicle</option>
+      </select>
+     <input type="text" id="fuelVehicleNumber" placeholder="Vehicle Number" readonly required>
     <input type="date" id="fuelDate" required>
     <input type="text" id="fuelInvoiceNumber" placeholder="Invoice Number" required>
     <select id="fuelType" required>
