--- a/dashboard.html
+++ b/dashboard.html
@@ -119,11 +119,25 @@
     </thead>
     <tbody></tbody>
   </table>
+
+   <!-- Floating Add Button -->
+<button id="addJourneyBtn" class="fab">
+  <span>＋</span>
+</button>
+
 </div>
 
   <script src="js/app.js"></script>
   
 <script>
+document.getElementById('addJourneyBtn').addEventListener('click', function() {
+  // Your logic to open the Add Journey form/modal/page
+  showSection('addJourney')
+  console.log("Add Journey button clicked!");
+  // or if you're showing a modal:
+  // document.getElementById('addJourneyModal').style.display = 'block';
+});
+  
 // Function to load pending journeys when the page loads
 document.addEventListener('DOMContentLoaded', function() {
   // Fetch pending journeys from Google Sheets web app endpoint
