--- a/dashboard.html
+++ b/dashboard.html
@@ -33,9 +33,9 @@
     </div>
     <div class="menu">
       <button onclick="showSection('home')">Home</button>
-      <button onclick="showSection('addJourney')">Add Journey</button>
+      <!-- <button onclick="showSection('addJourney')">Add Journey</button> -->
       <button onclick="showSection('fuel')">Fuel</button>
-      <button onclick="showSection('history')">History</button>
+      <button onclick="showSection('history')">Journey</button>
       <button onclick="logout()">Logout</button>
     </div>
   </div>
